--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,12 @@
 
 <% posts.forEach( post => { %>
     <h2> <%= post.title %> </h2>
-    <p> <%= (post.content).substring(0,100) + '...' %> </p> <a href="/posts/<%= post.title %>"">Read More</a>
+    <p> <%= (post.content).substring(0,100) + '...' %> </p> 
+    <a href="/posts/<%= post.title %>"">Read More</a>
     <% }) %>
+
+    <hr>
+    
+    <a href="/compose"><button class="btn compose"> Compose</button> </a>
 
 <%- include('partials/footer') %>
