--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 <% posts.forEach( post => { %>
     <h2> <%= post.title %> </h2>
     <p> <%= (post.content).substring(0,100) + '...' %> </p> 
-    <a href="/posts/<%= post.title %>"">Read More</a>
+    <a href="/posts/<%= post._id %>"">Read More</a>
     <% }) %>
 
     <hr>
